--- a/moneypool/myapp/templates/registration/login.html
+++ b/moneypool/myapp/templates/registration/login.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %}
 
+{% extends "base.html" %}
+{% load static %}
 {% block title %}Login{% endblock %}
 {% block content %}
 <div class="grid-x grid-padding-x">
