--- a/moneypool/myapp/templates/registration/register.html
+++ b/moneypool/myapp/templates/registration/register.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block title %}Registration{% endblock %}
 {% block header%}
    <h1 class="text-center">Register</h1>
