--- a/moneypool/myapp/templates/base.html
+++ b/moneypool/myapp/templates/base.html
@@ -8,10 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static "css/foundation.css" %}">
+    <!--<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">-->
     {% block css %}{% endblock%}
   </head>
   <body>
     <!--Navigation-->
+    {% include "partial/_navbar.html" %}
      <header>
       {% block header %}
         <h1 class="text-center">Welcome to {{ page_name }}</h1>
@@ -21,10 +23,10 @@
     {% block content %}
        
     {% endblock %}
-    <script src="{% static "js/vendor/jquery.js" %}"></script>
-    <script src="{% static "js/vendor/what-input.js" %}"></script>
-    <script src="{% static "js/vendor/foundation.js" %}"></script>
-    <script src="{% static "js/app.js" %}"></script>
+    <script src="{% static "js/bootstrap.js" %}"></script>
+    <script src="{% static "js/foundation.js" %}"></script>
+    <script src="{% static "js/jquery.js" %}"></script>
+    <!-- <script src="{% static "js/app.js" %}"></script> -->
     {% block scripts %}
     {% endblock %}
   </body>
