--- a/moneypool/myapp/templates/trip.html
+++ b/moneypool/myapp/templates/trip.html
@@ -9,7 +9,16 @@
 {% endblock header %}
 
 {% block content %}
-<h2 class="text-left"> Where To?</h2>
-    
-<h3 class="text-left"> When are you going?</h3>
+<div class="grid-x grid-padding-x">
+  <!-- <div class="large-4 medium-4 small-12 cell"></div> -->
+  <div class="large-4 medium-4 small-12 large-offset-4 medium-offset-4 cell">
+
+    <form action="/register/" method="post">
+        <h2 class="text-left"> Trip Location</h2>
+            <input type="location" class="button expanded" value="location" />
+        <h3 class="text-left"> Trip Date</h3>
+            <input type="date" class="button expanded" value="date" />
+    </form>
+  </div>
+</div>
 {% endblock content %}
