--- a/moneypool/myapp/templates/base.html
+++ b/moneypool/myapp/templates/base.html
@@ -1,4 +1,3 @@
- 
 {% load static %}
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
@@ -8,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static "css/foundation.css" %}">
-    <!--<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">-->
+  <!--  <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}"> -->
+    <link rel="stylesheet" href="{% static "css/sidebar.css" %}">
     {% block css %}{% endblock%}
   </head>
   <body>
@@ -19,13 +19,13 @@
         <h1 class="text-center">Welcome to {{ page_name }}</h1>
       {% endblock header %}
       </header>
-  
+
     {% block content %}
-       
+
     {% endblock %}
-    <script src="{% static "js/bootstrap.js" %}"></script>
-    <script src="{% static "js/foundation.js" %}"></script>
     <script src="{% static "js/jquery.js" %}"></script>
+    <!-- <script src="{% static "js/bootstrap.js" %}"></script> -->
+    <script src="{% static "js/foundation.js" %}"></script>
     <!-- <script src="{% static "js/app.js" %}"></script> -->
     {% block scripts %}
     {% endblock %}
