--- a/moneypool/myapp/templates/partial/_navbar.html
+++ b/moneypool/myapp/templates/partial/_navbar.html
@@ -1,7 +1,6 @@
 {% load static %}
 
-<div class="container-fluid">
-  <div class="row">
+
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
       <div class="sidebar-sticky pt-3">
         <ul class="nav flex-column">
@@ -44,7 +43,7 @@
         </ul>
 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-          <span>Extra</span>
+          <span>Trips</span>
           <a class="d-flex align-items-center text-muted" href="#">
             <span data-feather="plus-circle"></span>
           </a>
@@ -53,25 +52,25 @@
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="file-text"></span>
-              Extra
+              Trip 1
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="file-text"></span>
-              Extra
+              Trip 2
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="file-text"></span>
-              Extra
+              Trip 3
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="file-text"></span>
-              Extra
+              Trip 4
             </a>
           </li>
         </ul>
