--- a/moneypool/myapp/templates/base.html
+++ b/moneypool/myapp/templates/base.html
@@ -6,8 +6,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static "css/bootstrap1.min.css" %}">
     <link rel="stylesheet" href="{% static "css/foundation.css" %}">
-  <!--  <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}"> -->
     <link rel="stylesheet" href="{% static "css/sidebar.css" %}">
     {% block css %}{% endblock%}
   </head>
@@ -24,9 +24,10 @@
 
     {% endblock %}
     <script src="{% static "js/jquery.js" %}"></script>
-    <!-- <script src="{% static "js/bootstrap.js" %}"></script> -->
-    <script src="{% static "js/foundation.js" %}"></script>
-    <!-- <script src="{% static "js/app.js" %}"></script> -->
+    <script src="{% static "js/bootstrap.js" %}"></script>
+      <!--<script src="{% static "js/foundation.js" %}"></script>-->
+    <script src="{% static "js/bootstrap.bundle.min.js" %}"</script>
+    <!--<script src="{% static "js/app.js" %}"></script> -->
     {% block scripts %}
     {% endblock %}
   </body>
