--- a/moneypool/myapp/templates/partial/_navbar.html
+++ b/moneypool/myapp/templates/partial/_navbar.html
@@ -11,15 +11,15 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/profile">
               <span data-feather="file"></span>
-              Trips
+              Profile
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="trips"></span>
-              Extra Information
+              ...
             </a>
           </li>
           <li class="nav-item">
@@ -52,7 +52,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="file-text"></span>
-              Trip 1
+              Your upcoming trips
             </a>
           </li>
           <li class="nav-item">
