--- a/moneypool/myapp/templates/partial/_navbar.html
+++ b/moneypool/myapp/templates/partial/_navbar.html
@@ -17,6 +17,11 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/logout">
+            Logout
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="trips"></span>
               ...
