--- a/moneypool/myapp/templates/base.html
+++ b/moneypool/myapp/templates/base.html
@@ -7,21 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
     <link rel="stylesheet" href="{% static "css/foundation.css" %}">
+    <link rel="stylesheet" href="{% static "css/app.css" %}">
     <link rel="stylesheet" href="{% static "css/sidebar.css" %}">
 
     <title>{% block title %}{% endblock %}</title>
     
     {% block css %}{% endblock%}
   </head>
-  <body>
+  <body class="container">
     <!--Navigation-->
     {% include "partial/_navbar.html" %}
-     <header>
-      {% block header %}
-        <h1 class="text-center">Welcome to {{ page_name }}</h1>
-      {% endblock header %}
-      </header>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-9">
+          <header class="header">
+            {% block header %}
+              <h1 class="text-center">Welcome to {{ page_name }}</h1>
+            {% endblock header %}
 
+          </header>
+        </div>
+      </div>
+    </div>
+    
     {% block content %}
 
     {% endblock %}
