Did more styling and created links to each of the pages we have made so far in nav

--- a/moneypool/myapp/templates/partial/_navbar.html
+++ b/moneypool/myapp/templates/partial/_navbar.html
@@ -23,26 +23,26 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <span data-feather="trips"></span>
-              ...
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
               <span data-feather="users"></span>
               Friends
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <span data-feather="bar-chart-2"></span>
-              Extra
+              <span data-feather="trips"></span>
+              ...
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/addtrip">
+              <span data-feather="bar-chart-2"></span>
+              Create a New Trip
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/viewtrips">
               <span data-feather="layers"></span>
-              Extra
+              Find Trips
             </a>
           </li>
         </ul>
