--- a/moneypool/myapp/templates/searchTrips.html
+++ b/moneypool/myapp/templates/searchTrips.html
@@ -13,8 +13,8 @@
       <div class="col-md-3"></div>
       <div class="col-md-9">
          <h2 class="text-center">Public Trips</h2>
-         <table style="width:100%">
-            <tr>
+         <table class="table table-hover table-bordered">
+            <tr class="thead-dark">
                <th>Name</th>
                <th>Host</th>
                <th>Date</th>
