--- a/moneypool/myapp/templates/registration/login.html
+++ b/moneypool/myapp/templates/registration/login.html
@@ -1,12 +1,19 @@
 
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Login{% endblock %}
+
+{% block title %}
+
+{% endblock %}
+
+{% block header %} 
+<h1 class="text-center">Login</h1>
+{% endblock %}
 {% block content %}
 <div class="grid-x grid-padding-x">
   <!-- <div class="large-4 medium-4 small-12 cell"></div> -->
   <div class="large-4 medium-4 small-12 large-offset-4 medium-offset-4 cell">
-      
+
     <form action="/login/" method="post">
         {% csrf_token %}
 
