--- a/moneypool/myapp/templates/searchTrips.html
+++ b/moneypool/myapp/templates/searchTrips.html
@@ -13,6 +13,12 @@
       <div class="col-md-3"></div>
       <div class="col-md-9">
          <h2 class="text-center">Public Trips</h2>
+         <div class="col-md-3"></div>
+       <div class="col-md-9">
+            <form action="/findUsers" method="get">
+                <input name="q" type="text" placeholder="Search...">
+            </form>
+       </div>
          <table class="table table-hover table-bordered">
             <tr class="thead-dark">
                <th>Name</th>
