--- a/moneypool/myapp/templates/partial/_navbar.html
+++ b/moneypool/myapp/templates/partial/_navbar.html
@@ -22,9 +22,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/findUsers">
               <span data-feather="users"></span>
-              Friends
+              Find Users
             </a>
           </li>
           <li class="nav-item">
