--- a/moneypool/myapp/templates/partial/_navbar.html
+++ b/moneypool/myapp/templates/partial/_navbar.html
@@ -61,19 +61,19 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/tripdetails">
               <span data-feather="file-text"></span>
               Trip 2
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/tripdetails">
               <span data-feather="file-text"></span>
               Trip 3
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/tripdetails">
               <span data-feather="file-text"></span>
               Trip 4
             </a>
