--- a/moneypool/myapp/templates/profile.html
+++ b/moneypool/myapp/templates/profile.html
@@ -21,7 +21,7 @@
                </tr>
                {% for i in data %}
                   <tr>
-                     <td>{{i.location}}</td>
+                     <td><a href="/tripdetails/{{i.id}}">{{i.location}}</a></td>
                      <td>{{i.date}}</td>
                   </tr>
                {% endfor %}
