--- a/moneypool/myapp/templates/tripdetails.html
+++ b/moneypool/myapp/templates/tripdetails.html
@@ -10,12 +10,9 @@
 
 {% block content %}
 
-<div class="grid-x grid-padding-x">
-  <div class="large-4 medium-4 small-12 large-offset-4 medium-offset-4 cell">
-    <form action="/tripdetails/", method ="get">{% csrf_token %}
-        {{form}}
-            
-    </form>
+<div>
+  <div>
+    
   </div>
 </div>
 
