--- a/moneypool/myapp/templates/findUsers.html
+++ b/moneypool/myapp/templates/findUsers.html
@@ -24,7 +24,7 @@
            <ul>
             {% for i in user_list %}
                <li>
-                  <a href="/profile">{{i.username}}</a>
+                  <a href="/profile/{{i.id}}">{{i.username}}</a>
                </li>
             {% endfor %}
            </ul>
