--- a/moneypool/myapp/templates/profile.html
+++ b/moneypool/myapp/templates/profile.html
@@ -5,7 +5,7 @@
 {% block title %}{{title}}{% endblock %}
 
 {% block header%}
-   <h1 class="text-center text-dark">Hello {{ name }}</h1>
+   <h1 class="text-center text-dark">{{ name }}</h1>
 {%endblock header%}
 
 {% block content %}
@@ -13,7 +13,7 @@
       <div class="row">
          <div class="col-md-3"></div>
          <div class="col-md-9">
-            <h2 class="text-center">My Trips</h2>
+            <h2 class="text-center">{{tripTitle}}</h2>
             <table class="table table-hover table-bordered">
                <tr class="thead-dark">
                   <th>Event Name</th>
