Button to send a friend request works

--- a/moneypool/myapp/templates/profile.html
+++ b/moneypool/myapp/templates/profile.html
@@ -1,13 +1,16 @@
 {% extends "base.html" %}
 
 {% load static %}
+{% load friendshiptags %}
 
 {% block title %}{{title}}{% endblock %}
 
 {% block header%}
    <h1 class="text-center text-dark">{{ name }}</h1>
    {% if button %}
-      <input type="submit" class="button expanded" value="Add Friend"/>
+      <form action="/friendship/friend/add/{{to}}/" method='GET'> {% csrf_token %}
+         <input type="submit" class="button expanded" value="Add Friend"/>
+      </form>
    {% endif %}
 {%endblock header%}
 
@@ -29,6 +32,13 @@
                   </tr>
                {% endfor %}
             </table>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-md-3"></div>
+         <div class="col-md-9">
+            <h2 class="text-center">Friend Requests</h2>
+            {% friend_requests request.user %}
          </div>
       </div>
    </div>
