--- a/moneypool/myapp/templates/profile.html
+++ b/moneypool/myapp/templates/profile.html
@@ -37,8 +37,10 @@
       <div class="row">
          <div class="col-md-3"></div>
          <div class="col-md-9">
-            <h2 class="text-center">Friend Requests</h2>
-            {% friend_requests request.user %}
+            {% if not button %}
+               <h2 class="text-center">Friend Requests</h2>
+               {% friend_requests request.user %}
+            {% endif %}
          </div>
       </div>
    </div>
