--- a/moneypool/friendship/templates/friendship/friend/add.html
+++ b/moneypool/friendship/templates/friendship/friend/add.html
@@ -1,8 +1,8 @@
-{% if not to_username == request.user.username %}
+{% if not to == request.user.username %}
 {% if errors %}<p>{{ errors|join:", " }}</p>{% endif %}
-<form method="post">
+<form method="POST">
 {% csrf_token %}
-<input type="hidden" name="to_username" value="{{ to_username }}" />
-<input type="submit" value="add {{ to_username }} as a friend" />
+<input type="hidden" name="to_username" value="{{ to }}" />
+<input type="submit" value="add {{ to }} as a friend" />
 </form>
 {% endif %}
