--- a/moneypool/myapp/templates/profile.html
+++ b/moneypool/myapp/templates/profile.html
@@ -11,6 +11,13 @@
       <form action="/friendship/friend/add/{{to}}/" method='POST'> {% csrf_token %}
          <input type="submit" class="button expanded" value="Add Friend"/>
       </form>
+      {% if messages %}
+         <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+         </ul>
+      {% endif %}
    {% endif %}
 {%endblock header%}
 
