clicking friend request takes you to user's profile

--- a/moneypool/friendship/templates/friendship/templatetags/friend_requests.html
+++ b/moneypool/friendship/templates/friendship/templatetags/friend_requests.html
@@ -1,5 +1,10 @@
 <ul>
     {% for friend_request in friend_requests %}
-        <li>{{ friend_request }}</li>
+        <li>
+            <a href="/profile/{{friend_request.from_user.id}}" >{{ friend_request }}</a>
+            <form action="/friendship/friend/accept/{{friend_request.id}}/" method='POST'> {% csrf_token %}
+               <input type="submit" class="button" value="Accept Friend"/>
+            </form>
+        </li>
     {% endfor %}
 </ul>
