--- a/moneypool/friendship/templates/friendship/templatetags/friends.html
+++ b/moneypool/friendship/templates/friendship/templatetags/friends.html
@@ -1,9 +1,9 @@
 <ul>
 {% for f in friends %}
    {% if f.first_name or f.last_name %}
-   <li>{{ f.username }} ({{ f.first_name }} {{ f.last_name }})</li>
+   <li><a href="/profile/{{f.id}}">{{ f.first_name }} {{ f.last_name }}</a></li>
    {% else %}
-   <li>{{ f.username }}</li>
+   <li><a href="/profile/{{f.id}}">{{ f.username }}</a></li>
    {% endif %}
 {% endfor %}
 </ul>
