--- a/moneypool/myapp/templates/profile.html
+++ b/moneypool/myapp/templates/profile.html
@@ -2,11 +2,31 @@
 
 {% load static %}
 {% load friendshiptags %}
-
+{% block css %}
+<link rel="stylesheet" href="{% static "css/profile.css" %}">
+{% endblock %}
 {% block title %}{{title}}{% endblock %}
 
 {% block header%}
-   <h1 class="text-center text-dark">{{ name }}</h1>
+   <div class="container">   
+      <div class="row">
+         <div class="col-md-4"></div>
+         <div class="col-md-3">
+             <h1 class="text-center text-dark">{{ name }}</h1>
+         </div>
+         <div class="col-md-5">
+      {% if not button and fromreqs%}
+         <div class="dropdown">
+            <p class="fr">Friend Requests: <span class="link">{{fromreqs}}</span></p>
+            <div class="dropdown-content">
+               {% friend_requests request.user %} <!-- friend_requests.html -->
+            </div>
+         </div>
+   
+      {% endif %}
+         </div>
+      </div>
+   </div>
    {% if not arefriends and button and not sentreqs %}
       <form action="/friendship/friend/add/{{to}}/" method='POST'> {% csrf_token %}
          <input type="submit" class="button expanded" value="Add Friend"/>
@@ -20,7 +40,7 @@
       {% endif %}
    {% endif %}
 {%endblock header%}
-
+<!-- Trip Table -->
 {% block content %}
    <div class="container">
       <div class="row">
@@ -40,13 +60,14 @@
                {% endfor %}
             </table>
          </div>
+        
+            <!-- Maybe -->
+         </div>
       </div>
       <div class="row">
          <div class="col-md-3"></div>
          <div class="col-md-9">
             {% if not button %}
-               <h2 class="text-center">Friend Requests</h2>
-               {% friend_requests request.user %}
                <h2>Friends</h2>
                {% friends request.user %}
 
