fixed the styling issue with the 'public' checkbox and the 'create trip' button

--- a/moneypool/myapp/templates/addtrip.html
+++ b/moneypool/myapp/templates/addtrip.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block css %}
+   <link rel="stylesheet" href="{% static "css/createTrip.css" %}">
+{% endblock %}
+
 {% block title %}{{title}}{% endblock %}
 
 {% block header%}
