--- a/moneypool/myapp/templates/suggestionIndex.html
+++ b/moneypool/myapp/templates/suggestionIndex.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-
+{% load static %}
 
 {% block content %}
 
@@ -10,7 +10,7 @@
     {% if latest_question_list %}
         <tr>
         {% for question in latest_question_list %}
-            <td><a href="/suggestions/{{ question.id }}/">{{ question.question_text }}</a></td>
+            <li><td><a href="/suggestions/{{ question.id }}/">{{ question.question_text }}</a></td></li>
         {% endfor %}
         </tr>
     {% else %}
