trip details show the location date and how many are going on main page

--- a/moneypool/myapp/templates/tripdetails.html
+++ b/moneypool/myapp/templates/tripdetails.html
@@ -12,7 +12,12 @@
 
 <div>
   <div>
-    
+    <div class="text-center"> Event Details</div>
+      <div>
+        <li class="text-center"> Where are we going: {{title}} </li>
+        <li class="text-center"> When are we going: {{date}} </li>
+        <li class="text-center"> How many are going: {{attendants}} </li>
+      </div>
   </div>
 </div>
 
