--- a/moneypool/myapp/templates/tripdetails.html
+++ b/moneypool/myapp/templates/tripdetails.html
@@ -12,7 +12,11 @@
 
 <div>
   <div>
-    
+    {% if not isauthor and not isattending %}
+    <form action="/acceptTripReq/{{id}}/" method='POST'> {% csrf_token %}
+      <input type="submit" class="button expanded" value="Join Trip"/>
+   </form>
+    {%endif%}
   </div>
 </div>
 
