modified styling slightly for testing

--- a/moneypool/myapp/static/css/profile.scss
+++ b/moneypool/myapp/static/css/profile.scss
@@ -38,3 +38,16 @@
 .reject{
     background-color: rgb(221, 69, 69);
 }
+
+.r{
+    background-color: red;
+ }
+ 
+ .g{
+     background-color: green;
+ }
+ 
+ .b{
+     background-color: blue;
+ }
+ 
