--- a/moneypool/myapp/static/css/profile.css
+++ b/moneypool/myapp/static/css/profile.css
@@ -39,4 +39,16 @@
 .reject {
   background-color: #dd4545;
 }
+
+.r {
+  background-color: red;
+}
+
+.g {
+  background-color: green;
+}
+
+.b {
+  background-color: blue;
+}
 /*# sourceMappingURL=profile.css.map */
