--- a/moneypool/myapp/static/css/profile.scss
+++ b/moneypool/myapp/static/css/profile.scss
@@ -14,7 +14,7 @@
 
 .dropdown:hover .dropdown-content{
     display: block;
-    background-color: #f8bfa5;
+    background-color: rgba(255, 255, 250, .5)
 }
 
 .link{
