--- a/moneypool/myapp/templates/tripdetails.html
+++ b/moneypool/myapp/templates/tripdetails.html
@@ -15,16 +15,18 @@
       <div class="col-md-6"></div>
       <div class="col-md-3">
           {% if not isauthor and not isattending %}
-              {% if invited %}
+              {% if isinvited %}
                   <form action="/acceptTripReq/{{id}}/" method='POST'> {% csrf_token %}
-                    <input type="submit" class="button" value="Join Trip"/>
+                    <input type="submit" class="button" value="Accept Trip Request"/>
                   </form>
               {% endif %}
 
-              {% if not invited %}
-                <form action="/joinTrip/{{id}}/" method='POST'> {% csrf_token %}
-                  <input type="submit" class="button" value="Join Trip"/>
-                </form>
+              {% if not isinvited %}
+                  {% if public %}
+                    <form action="/joinTrip/{{id}}/" method='POST'> {% csrf_token %}
+                      <input type="submit" class="button" value="Join Trip"/>
+                    </form>
+                  {% endif %}
               {% endif %}
           {%endif%}
           {% if isattending %}
@@ -36,6 +38,7 @@
       <div class="col-md-3"></div>
 
   </div>
+  
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-9">
