--- a/moneypool/myapp/templates/tripdetails.html
+++ b/moneypool/myapp/templates/tripdetails.html
@@ -9,12 +9,12 @@
 {% endblock header %}
 
 <style>
-.detailsDiv(
+.detailsDiv{
   text-align: center;
   border: 2px solid black;
   margin: 20px;
   padding: 20px;
-)
+}
 </style>
 
 {% block content %}
@@ -47,7 +47,6 @@
       <div class="col-md-3"></div>
 
   </div>
-  
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-9">
@@ -58,33 +57,29 @@
     </div>
   </div>
 </div>
-<div>
-      <div class=".detailsDiv">
-         <div class="col-md-3"></div>
-         <div >
-            <h2 class="text-center">details</h2>
-            <li>{{title}}</li>
-            <li>{{date}}</li>
-            <li>{{attendants}}</li>
-            <table class="table table-hover table-bordered">
-               <tr class="thead-dark">
-                  <th>Category</th>
-                  <th></th>
-                  <th type="button">add</th>
-               </tr>
-                  <tr type="button">
-                     <td class="text-center">Traveling</td> 
-                  </tr>
-                  <tr type="button">
-                     <td class="text-center">Housing</td> 
-                  </tr>
-                  <tr type="button">
-                     <td class="text-center">Food</td> 
-                  </tr>
-            </table>
-         </div>
-      </div>
-   </div>
+<div class="container .detailsDiv">
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-6">
+      <table class="table table-hover table-bordered">
+          <tr class="thead-dark">
+            <th>Category</th>
+          </tr>
+          <tr type="button">
+              <td class="text-center">Traveling</td> 
+          </tr>
+          <tr type="button">
+              <td class="text-center">Housing</td> 
+          </tr>
+          <tr type="button">
+              <td class="text-center">Food</td> 
+          </tr>
+      </table>
+    </div>
+    <div class="col-md-2"></div>
+  </div>
+</div>
+
 
 
 {% endblock content %}
