--- a/moneypool/myapp/static/css/app.css
+++ b/moneypool/myapp/static/css/app.css
@@ -1,4 +1,10 @@
 body {
   background-color: rgba(247, 124, 73, 0.7);
 }
+
+.main-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 /*# sourceMappingURL=app.css.map */
