--- a/moneypool/myapp/templates/base.html
+++ b/moneypool/myapp/templates/base.html
@@ -14,26 +14,28 @@
     
     {% block css %}{% endblock%}
   </head>
-  <body class="container">
-    <!--Navigation-->
-    {% include "partial/_navbar.html" %}
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-9">
-          <header class="header">
-            {% block header %}
-              <h1 class="text-center">Welcome to {{ page_name }}</h1>
-            {% endblock header %}
-
-          </header>
-        </div>
+  <body>
+    <div class="main-flex">
+      <div>
+        {% include "partial/_navbar.html" %}
       </div>
-    </div>
-    
-    {% block content %}
+        <div class="container">
+          <!--Navigation-->
+          <div class="container">
+              <div>
+                <header class="header">
+                  {% block header %}
+                    <h1 class="text-center">Welcome to {{ page_name }}</h1>
+                  {% endblock header %}
+                </header>
+              </div>
+          </div>
+          {% block content %}
 
-    {% endblock %}
+          {% endblock %}
+        </div>
+
+    </div>
     <script src="{% static "js/jquery-3.3.1.slim.min.js" %}"></script>
     <script src="{% static "js/popper.min.js" %}"></script>
     <script src="{% static "js/bootstrap.min.js" %}"></script>
