--- a/moneypool/myapp/templates/partial/_navbar.html
+++ b/moneypool/myapp/templates/partial/_navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+    <nav id="sidebarMenu" class="d-md-block bg-light sidebar">
       <div class="sidebar-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
@@ -43,39 +43,6 @@
             <a class="nav-link" href="/viewtrips">
               <span data-feather="layers"></span>
               Find Trips
-            </a>
-          </li>
-        </ul>
-
-        <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-          <span>Trips</span>
-          <a class="d-flex align-items-center text-muted" href="#">
-            <span data-feather="plus-circle"></span>
-          </a>
-        </h6>
-        <ul class="nav flex-column mb-2">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Your upcoming trips
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/tripdetails/{{id}}">
-              <span data-feather="file-text"></span>
-              Trip 2
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/tripdetails/{{id}}">
-              <span data-feather="file-text"></span>
-              Trip 3
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/tripdetails/{{id}}">
-              <span data-feather="file-text"></span>
-              Trip 4
             </a>
           </li>
         </ul>
