--- a/moneypool/myapp/static/css/app.css
+++ b/moneypool/myapp/static/css/app.css
@@ -2,9 +2,22 @@ body {
   background-color: rgba(247, 124, 73, 0.7);
 }
 
-.main-flex {
+body .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+body #sidebar {
+  min-width: 250px;
+  min-height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
 }
 /*# sourceMappingURL=app.css.map */
