--- a/moneypool/myapp/static/css/sidebar.css
+++ b/moneypool/myapp/static/css/sidebar.css
@@ -1,20 +1,26 @@
 /* SideBar CSS */
 
+h3{
+  margin-left: 20px;
+  color: rgb(28, 76, 235);
+}
+.component
 .sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
+
   z-index: 100; /* Behind the navbar */
   padding: 48px 0 0; /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  height: inherit;
 }
 
-@media (max-width: 767.98px) {
+#navcomp{
+  height: 100%;
+}
+/* @media (max-width: 767.98px) {
   .sidebar {
     top: 5rem;
   }
-}
+} */
 
 .sidebar-sticky {
   position: relative;
