--- a/moneypool/myapp/static/css/tripdetails.css
+++ b/moneypool/myapp/static/css/tripdetails.css
@@ -3,12 +3,12 @@
   background-color: black;
   z-index: 1000;
   width: 100%;
-  padding-left: 0px;
-  padding-right: 0px;
 }
 
 #navbar ul {
-  padding: 0;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
   margin: 0;
   list-style: none;
   display: -webkit-box;
@@ -37,5 +37,13 @@
 
 .title {
   color: rgba(247, 239, 204, 0.945);
+}
+
+.details {
+  margin-top: 10px;
+}
+
+header {
+  width: 100vw;
 }
 /*# sourceMappingURL=tripdetails.css.map */
