--- a/moneypool/myapp/templates/base.html
+++ b/moneypool/myapp/templates/base.html
@@ -15,27 +15,27 @@
     {% block css %}{% endblock%}
   </head>
   <body>
-    <div class="main-flex">
-      <div>
-        {% include "partial/_navbar.html" %}
-      </div>
-        <div class="container">
-          <!--Navigation-->
-          <div class="container">
-              <div>
-                <header class="header">
-                  {% block header %}
-                    <h1 class="text-center">Welcome to {{ page_name }}</h1>
-                  {% endblock header %}
-                </header>
-              </div>
+    <div class="container-fluid nopadding nomargins">
+      <div class="row">
+        <div class="wrapper">
+          <div class="nopadding">
+            {% include "partial/_navbar.html" %}
           </div>
-          {% block content %}
+          <div class="col-md-2"></div>
+          <div class="col-md-10 nopadding nomargins">
+              <header class="header">
+                {% block header %}
+                  <h1 class="text-center">Welcome to {{ page_name }}</h1>
+                {% endblock header %}
+              </header>
+              {% block content %}
 
-          {% endblock %}
+              {% endblock %}
+          </div>
         </div>
-
+      </div>
     </div>
+
     <script src="{% static "js/jquery-3.3.1.slim.min.js" %}"></script>
     <script src="{% static "js/popper.min.js" %}"></script>
     <script src="{% static "js/bootstrap.min.js" %}"></script>
