--- a/moneypool/myapp/templates/partial/_navbar.html
+++ b/moneypool/myapp/templates/partial/_navbar.html
@@ -1,15 +1,11 @@
 {% load static %}
 
-
-    <nav id="sidebarMenu" class="d-md-block bg-light sidebar">
-      <div class="sidebar-sticky pt-3">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">
-              <span data-feather="home"></span>
-              MoneyPool DashBoard <span class="sr-only">(current)</span>
-            </a>
-          </li>
+<div class="wrapper" id="navcomp">
+    <nav id="sidebar" class="bg-light">
+      <div class="sidebar-header">
+        <h3>MoneyPool</h3>
+      </div>
+        <ul class="list-unstyled components">
           <li class="nav-item">
             <a class="nav-link" href="/profile">
               <span data-feather="file"></span>
@@ -46,5 +42,5 @@
             </a>
           </li>
         </ul>
-      </div>
     </nav>
+</div>
