--- a/moneypool/myapp/templates/searchTrips.html
+++ b/moneypool/myapp/templates/searchTrips.html
@@ -11,14 +11,24 @@
 <div class="container">
    <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-9">
+      <div class="col-md-6">
          <h2 class="text-center">Public Trips</h2>
-         <div class="col-md-3"></div>
-       <div class="col-md-9">
+      </div>
+      <div class="col-md-3"></div>
+   </div>
+   
+   <div class="row">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
             <form action="/findUsers" method="get">
                 <input name="q" type="text" placeholder="Search...">
             </form>
        </div>
+       <div class="col-md-4"></div>
+   </div>
+   <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
          <table class="table table-hover table-bordered">
             <tr class="thead-dark">
                <th>Name</th>
@@ -38,6 +48,7 @@
             {% endfor %}
          </table>
       </div>
+      <div class="col-md-3"></div>
    </div>
 </div>
 {% endblock content %} 
