trip details categories display question text

--- a/moneypool/myapp/templates/tripdetails.html
+++ b/moneypool/myapp/templates/tripdetails.html
@@ -16,9 +16,9 @@
         <nav id="navbar">
           <h1 class="text-center title"> {{title}}</h1>
           <ul>
-              <li><a href="#">Traveling</a></li>
-              <li><a href="#">Housing</a></li>
-              <li><a href="#">Food</a></li>
+              <li><a href="/tripdetails/{{id}}/categoryPage/1">Traveling</a></li>
+              <li><a href="/tripdetails/{{id}}/categoryPage/2">Housing</a></li>
+              <li><a href="/tripdetails/{{id}}/categoryPage/3">Food</a></li>
           </ul>
         </nav>
       </div>
