--- a/moneypool/myapp/templates/addSuggestion.html
+++ b/moneypool/myapp/templates/addSuggestion.html
@@ -8,47 +8,14 @@
 
 {% block title %}Add Suggestion{% endblock %}
 
-{% block main %}
-<div class="row">
-    <div class="col-lg-8 col-lg-offset-2">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Add a Suggestion</h3>
-            </div>
-
-            <form method="POST">{% csrf_token %}
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="form-group">
-                                <label for="question">Add Question:</label>
-                                {{ question.question_text }}
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="form-group">
-                                <label for="option">Choice: </label>
-                                {% for choice in Data %}
-                                    <input type="radio" name="choice" id="choice{{ choice.Author }}" value="{{ choice.id }}" />
-                                    <label for="choice{{ choice.Author }}">{{ choice.choice_text }}</label><br />
-                                {% endfor %}
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <hr/>
-                        <div class="col-lg-4">
-                            <button type="submit" class="btn btn-info">Submit</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-
-        </div>
+{% block content %}
+<div class="container">
+    <div class="row">
+       {{form}}
+       <label for="choice">Choice</label><br>  
+       <input type="text" id="choice"/>
+       
+       <input type="submit" value="Create Suggestion" class="button"/>
     </div>
 </div>
 {% endblock content %}
